<resources>
    <string name="app_name">Museos de Madrid</string>
    <string name="tv_titulo">Buscador de Museos de la Comunidad de Madrid</string>
    <string name="bt_filtro">Seleccionar filtro</string>
    <string name="bt_consultar">Consultar Listado</string>
    <string name="mn_mapa">MAPA</string>
    <string name="mn_listado">LISTADO</string>
    <string name="tv_filtro">Distrito selecionado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_distrito">Distrito: </string>
    <string name="tv_area">Area: </string>
    <string name="tv_descripcion">Descripción: </string>
    <string name="tv_horario">Horario: </string>
    <string name="tv_nombre">Museo: </string>
    <string name="tv_direccion">Dirección:</string>
    <string name="cambioMapa">Busqueda por Mapa</string>
    <string name="cambioLista">Busqueda por Lista</string>
</resources>