<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/redComunidad"
    tools:context=".DetalleActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/tv_nombre"
        android:layout_marginTop="@dimen/margin"
        />

    <TextView
        android:id="@+id/tvDistrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_distrito"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        android:layout_marginTop="@dimen/margin" />

    <TextView
        android:id="@+id/tvArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_area"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDistrito"
        android:layout_marginTop="@dimen/margin"/>

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_direccion"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvArea"
        android:layout_marginTop="@dimen/margin"/>



    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_descripcion"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDireccion"
        android:layout_marginTop="@dimen/margin"/>

    <TextView
        android:id="@+id/tvHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_horario"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDescripcion"
        android:layout_marginTop="@dimen/margin"/>




</androidx.constraintlayout.widget.ConstraintLayout>