<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/redComunidad"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/btnFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_filtro"
        android:textSize="@dimen/btn"
        android:backgroundTint="@color/white"
        android:textColor="@color/redComunidad"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/btn" />

    <TextView
        android:id="@+id/tvFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnFiltro"
        android:text="@string/tv_filtro"
        android:textAlignment="center"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/frLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvFiltro"
        app:layout_constraintBottom_toTopOf="@id/btnConsultar"/>

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_consultar"
        android:textSize="@dimen/btn"
        android:backgroundTint="@color/white"
        android:textColor="@color/redComunidad"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>